[Spec Kit] 005 T036: quickstart V1-V5 all PASS (complete)
V3 (Open Case + invalid-folder), V4 (profile create/clone/edit/save + built-in
Save As + name collision + appears in wizard) and V5 (i18n pt_BR/en across menu,
wizard and editor) validated interactively. T036 complete: V1-V5 all PASS;
Recent Cases stays deferred (T018/T021).

Running the quickstart surfaced 4 real issues, all fixed: SecurityManager launch
flag (4b95f3088), stale pre-Java-21 engine release (rebuild), main-menu i18n
search scope (691e1c383), DS Service-Component header stripping (6ec9ca55a).
quickstart-results.md records the full run + the bug table.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>